// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox passes props correctly 1`] = `
<label
  className="lui-checkbox my-class"
  title="Title"
>
  <input
    checked={true}
    className="lui-checkbox__input"
    data-x="x"
    onChange={[MockFunction]}
    type="checkbox"
  />
  <div
    className="lui-checkbox__check-wrap"
  >
    <span
      className="lui-checkbox__check"
    />
    <span
      className="lui-checkbox__check-text"
    />
  </div>
</label>
`;

exports[`Checkbox with modifiers renders correctly 1`] = `
<label
  className="lui-checkbox lui-checkbox--inverse"
>
  <input
    checked={true}
    className="lui-checkbox__input"
    type="checkbox"
  />
  <div
    className="lui-checkbox__check-wrap"
  >
    <span
      className="lui-checkbox__check"
    />
    <span
      className="lui-checkbox__check-text"
    />
  </div>
</label>
`;

exports[`Checkbox with states renders correctly 1`] = `
<label
  className="lui-checkbox lui-active"
>
  <input
    checked={true}
    className="lui-checkbox__input"
    disabled={true}
    type="checkbox"
  />
  <div
    className="lui-checkbox__check-wrap"
  >
    <span
      className="lui-checkbox__check"
    />
    <span
      className="lui-checkbox__check-text"
    />
  </div>
</label>
`;

exports[`Normal checkbox renders correctly 1`] = `
<label
  className="lui-checkbox"
>
  <input
    checked={true}
    className="lui-checkbox__input"
    type="checkbox"
  />
  <div
    className="lui-checkbox__check-wrap"
  >
    <span
      className="lui-checkbox__check"
    />
    <span
      className="lui-checkbox__check-text"
    />
  </div>
</label>
`;
